[metadata]
name = bitget-api
version = attr: bitget_api.__version__
description = A Python client for the Bitget API with comprehensive position management
author = Tentoxa
license = MIT

[options]
packages = find:
python_requires = >=3.7
install_requires =
    requests
    typing

[options.packages.find]
include = bitget_api*
